# proxydns

./: .gitignore  LICENSE  README.md  README.old.md  pyproject.toml  requirements.txt
src/proxydns.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/proxydns_pverlly/: __main__.py  proxydns.py  test.py
